# android-sdk-tools

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE.txt  README.md  build.py  get_source.py  repos.json
build-tools/: CMakeLists.txt  aapt.cmake  aapt2.cmake  aidl.cmake  dexdump.cmake  split-select.cmake  zipalign.cmake
lib/: CMakeLists.txt  libabsl.cmake  libandroidfw.cmake  libbase.cmake  libbuildversion.cmake  libcutils.cmake  libdiagnoseusb.cmake  libincfs.cmake  liblog.cmake  libmdnssd.cmake  libopenscreen.cmake  libpackagelistparser.cmake  libprocessgroup.cmake  libprotoc.cmake  libselinux.cmake  libsepol.cmake  libsparse.cmake  libusb.cmake  libutils.cmake  libziparchive.cmake
others/: CMakeLists.txt  veridex.cmake
patches/: StringPiece.h.patch  dex_file.cc.patch  instruction_set.h.patch  mem_map.cc.patch  protobuf_CMakeLists.txt.patch  task_runner.h.patch
patches/misc/: IncrementalProperties.sysprop.cpp  IncrementalProperties.sysprop.h  deployagent.inc  deployagentscript.inc  platform_tools_version.h
patches/proto/: Resources.proto.patch  ResourcesInternal.proto.patch
platform-tools/: CMakeLists.txt  adb.cmake  dmtracedump.cmake  e2fsprogs.cmake  etc1tool.cmake  f2fs-tools.cmake  fastboot.cmake  hprof-conv.cmake  sqlite3.cmake
src/libbuildversion/: Android.bp  libbuildversion.cpp
src/libbuildversion/tests/: Android.bp  build_version_test.cpp  build_version_test_lib.cpp  build_version_test_lib.h
src/libziparchive/: Android.bp  OWNERS  TEST_MAPPING  libziparchive_fuzzer.cpp  libziparchive_writer_fuzzer.cpp  run-ziptool-tests-on-android.sh  test_ziparchive_large.py  zip_archive.cc  zip_archive_common.h  zip_archive_private.h  zip_archive_stream_entry.cc  zip_archive_test.cc  zip_writer.cc  ziptool.cpp
src/libziparchive/incfs_support/: signal_handling.cpp
src/libziparchive/incfs_support/include/incfs_support/: access.h  signal_handling.h  util.h
src/libziparchive/include/ziparchive/: zip_archive.h  zip_writer.h
